# DensityFunctionCompiler

./: .gitignore  build.gradle  gradle.properties  settings.gradle
dfc-natives/: CMakeLists.txt  build.gradle
dfc-natives/prebuilts/: README.txt
dfc-natives/src/main/c/: blended_noise.c  dfc_internal.h  dfc_jni.c  improved_noise.c  improved_noise_avx2.c  normal_noise_stack.c  slab_inner_vm.c  wrap_axis.c
dfc-natives/src/main/java/dev/denismasterherobrine/dfcnatives/: DfcNativeBridge.java  NativeLibraryLoader.java
src/main/java/dev/denismasterherobrine/densityfunctioncompiler/: DensityFunctionCompiler.java
src/main/java/dev/denismasterherobrine/densityfunctioncompiler/aquifer/: DfcAquiferFusion.java
src/main/java/dev/denismasterherobrine/densityfunctioncompiler/cache/: DfcCacheFastPath.java  DfcCellCacheAccess.java
src/main/java/dev/denismasterherobrine/densityfunctioncompiler/compat/: FabricBiomeApiClimateRebind.java
src/main/java/dev/denismasterherobrine/densityfunctioncompiler/compiler/: Compiler.java  McDensityFunctionClassNames.java
src/main/java/dev/denismasterherobrine/densityfunctioncompiler/config/: DfcConfig.java
src/main/java/dev/denismasterherobrine/densityfunctioncompiler/debug/: DfcCommand.java  DfcDumper.java  IRPrinter.java  OriginalRouterRegistry.java  RouterParityCheck.java  RouterParityCommand.java
src/main/java/dev/denismasterherobrine/densityfunctioncompiler/doc/: AquiferParitySpec.java  BeardifierAssessment.java  ImprovedNoisePScope.java
src/main/java/dev/denismasterherobrine/densityfunctioncompiler/mixin/: NoiseBasedAquiferMixin.java  (+8 more)
src/main/resources/: densityfunctioncompiler.mixins.json
src/main/resources/assets/densityfunctioncompiler/lang/: en_us.json
(+57 files in other folders)
